--- a/libraries/libraries/static/scss/components/blog/_blog-post.scss
+++ b/libraries/libraries/static/scss/components/blog/_blog-post.scss
@@ -99,15 +99,14 @@
       align-items: center;
       display: flex;
 
-      *:first-child {
+      // fix bug with blog rows: _every_ descendent first-child gets the margin
+      // without the child ">" selector, screws up e.g. <p>text<i>italics</i>text<p>
+      > *:first-child {
+        flex: 1 0 60%;
         margin-right: 20px;
       }
 
-      .blog-post__paragraph {
-        flex: 1 0 60%;
-      }
-
-      .blog-post__quote {
+      > *:nth-child(2) {
         flex: 1 0 40%;
         padding-right: 0;
       }
