--- a/libraries/libraries/templates/components/footer/footer-info.html
+++ b/libraries/libraries/templates/components/footer/footer-info.html
@@ -1,36 +1,27 @@
 <li class="footer-section footer-section--info">
 	<h4 class="footer-section__title">
-		Need more information?
+		Social Media
 	</h4>
-	<div class="footer-section__content">
-		<p class="footer-section__text">
-			Duis fringilla congue elit, quis pharetra
-			lorem ultrices vitae. Aliquam iaculis ornare
-			tristique. Phasellus ullamcorper.
-		</p>
-		<a
-			href="#"
-			title="Ask a question"
-			class="footer-section__link footer-section__link--question"
-		>
-			Ask a question
-		</a>
-	</div>
 	<div class="footer-section__links">
 		<a
 			href="https://www.facebook.com/ccalibrary"
 			title="Like us on Facebook"
-			class="footer-section__social-link"
+			class="footer-section__social-link facebook"
 		>facebook.com/ccalibrary</a>
 		<a
 			href="https://www.instagram.com/ccalibraries/"
 			title="View our Instagram"
-			class="footer-section__social-link"
+			class="footer-section__social-link instagram"
 		>CCA Libraries</a>
 		<a
 			href="https://twitter.com/ccalibraries"
 			title="Follow us on Twitter"
-			class="footer-section__social-link"
+			class="footer-section__social-link twitter"
 		>@CCALibraries</a>
+		<a
+			class="footer-section__social-link news"
+			href="/news"
+			title="CCA Libraries' news"
+		>Libraries' News</a>
 	</div>
 </li>
