--- a/libraries/libraries/templates/components/footer/footer-links.html
+++ b/libraries/libraries/templates/components/footer/footer-links.html
@@ -5,19 +5,23 @@
 		Helpful links
 	</h4>
 
-	<a href="{% slugurl 'hours' %}" title="View our open hours" class="footer-section__link">
-		Open Hours
+	<a href="{% slugurl 'ask-us' %}" title="Ask a librarian for assistance" class="footer-section__link">
+		Ask a Question
 	</a>
 
-	<a href="https://cca.summon.serialssolutions.com" title="Search for books, articles, DVDs, & more" class="footer-section__link">
-		Search
+	<a href="https://www.cca.edu" title="View the main CCA website" class="footer-section__link">
+		CCA.edu
 	</a>
 
-	<a href="{% slugurl 'staff' %}" title="List of CCA Libraries' staff" class="footer-section__link">
-		Staff List
+	<a href="https://vault.cca.edu" title="View VAULT, CCA's digital archive" class="footer-section__link">
+		VAULT
 	</a>
 
-	<a href="{% slugurl 'blog' %}" title="CCA Libraries' Blog" class="footer-section__link">
-		Blog
+	<a href="http://moodle.cca.edu" title="Moodle is CCA's learning management system" class="footer-section__link">
+		Moodle
+	</a>
+
+	<a href="https://portal.cca.edu" title="Find people, classes, & more in the Portal" class="footer-section__link">
+		Portal
 	</a>
 </li>
