--- a/libraries/libraries/templates/components/footer/footer-sites.html
+++ b/libraries/libraries/templates/components/footer/footer-sites.html
@@ -1,6 +1,6 @@
 <li class="footer-section">
 	<h4 class="footer-section__title">
-		Sites
+		Locations
 	</h4>
 
 	<ul class="footer-section__sites">
