--- a/libraries/libraries/static/scss/components/blog/_blog-post.scss
+++ b/libraries/libraries/static/scss/components/blog/_blog-post.scss
@@ -77,6 +77,7 @@
     }
 
   .blog-post__subtitle {
+    font-family: $font-family-sans-serif;
     font-size: 16px;
     font-weight: 700;
     margin: 0 0 15px;
