search - different labels, rm 2nd option, closes #17

--- a/libraries/libraries/templates/components/search/search-box.html
+++ b/libraries/libraries/templates/components/search/search-box.html
@@ -23,21 +23,7 @@
 			type="radio"
 			value="all"
 		/>
-		Libraries' Search
-	</label>
-
-	<label
-		tabindex="0"
-		class="search-box__type-label"
-	>
-		<input
-			class="search-box__type-input"
-			name="searchType"
-			tabindex="-1"
-			type="radio"
-			value="catalog"
-		/>
-		Books & Media
+		Books, media, & more
 	</label>
 
 	<label
@@ -54,7 +40,7 @@
 			type="radio"
 			value="services"
 		/>
-		Library Services
+		Pages & people
 	</label>
 
 	{% if search_results.paginator.count > 0 %}
