--- a/libraries/libraries/static/scss/fonts/_google-fonts.scss
+++ b/libraries/libraries/static/scss/fonts/_google-fonts.scss
@@ -1,1 +1,3 @@
+// NOTE: these were the backup open source fonts that Torchbox used when
+// building out our templates, we've saved them here but not actually used now
 @import url('https://fonts.googleapis.com/css?family=Merriweather:300,400,700|Raleway:400,700');
