--- a/libraries/libraries/static/scss/settings/_font-families.scss
+++ b/libraries/libraries/static/scss/settings/_font-families.scss
@@ -1,3 +1,3 @@
-$font-family-sans-serif: 'Raleway', sans-serif;
-$font-family-serif: 'Merriweather', serif;
+$font-family-sans-serif: 'Brown', 'Raleway', 'Helvetica Neue', sans-serif;
+$font-family-serif: 'The Serif', 'Merriweather', 'Georgia', serif;
 $font-family-monospace: 'Consolas', 'Liberation Mono', 'Menlo', 'Courier', monospace;
