--- a/libraries/libraries/static/scss/fonts/_google-fonts.scss
+++ b/libraries/libraries/static/scss/fonts/_google-fonts.scss
@@ -1,3 +1,4 @@
-// NOTE: these were the backup open source fonts that Torchbox used when
-// building out our templates, we've saved them here but not actually used now
-@import url('https://fonts.googleapis.com/css?family=Merriweather:300,400,700|Raleway:400,700');
+// NOTE: these are the backup open source fonts that Torchbox used when
+// building out our templates but not the official CCA brand fonts.
+// Formerly had "|Raleway:400,700" on the end, too
+@import url('https://fonts.googleapis.com/css?family=Merriweather:300,400,700');
