--- a/libraries/libraries/static/scss/components/services/_service-row-item.scss
+++ b/libraries/libraries/static/scss/components/services/_service-row-item.scss
@@ -10,7 +10,7 @@
   flex: 0 0 100%;
   flex-wrap: wrap;
 
-  &:not(:last-of-type) {
+  &:not(:nth-of-type(3n)) {
     border-bottom: 1px solid black(0.1);
     margin: 0 0 15px;
   }
@@ -19,7 +19,7 @@
   @include respond($break-medium) {
     flex: 0 0 30%;
 
-    &:not(:last-of-type) {
+    &:not(:nth-of-type(3n)) {
       border-bottom: 0;
       border-right: 1px solid black(0.1);
       margin-right: 24px;
