list styles in blog post, about us templates

--- a/libraries/libraries/static/scss/components/about-us/_about-us-text.scss
+++ b/libraries/libraries/static/scss/components/about-us/_about-us-text.scss
@@ -30,6 +30,12 @@
     @include respond($break-medium) {
       flex: 2 0 30%;
     }
+
+    ul, ol {
+        list-style: inherit;
+        margin: 0 0 24px;
+        padding-left: 2em;
+    }
   }
 
     .about-us-text {
