--- a/libraries/libraries/static/scss/components/blog/_blog-post.scss
+++ b/libraries/libraries/static/scss/components/blog/_blog-post.scss
@@ -93,6 +93,12 @@
     font-weight: 300;
     line-height: 1.4em;
     margin: 0 0 15px;
+
+    ul, ol {
+        list-style: inherit;
+        margin: 0 0 24px;
+        padding-left: 2em;
+    }
   }
 
   .blog-post__quote {
