--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -68,6 +68,7 @@
 @import 'components/misc/breadcrumb';
 @import 'components/misc/link';
 @import 'components/misc/page';
+@import 'components/misc/rich-text';
 @import 'components/misc/wrapper';
 
 // -- Search page and components
