--- a/libraries/libraries/templates/base.html
+++ b/libraries/libraries/templates/base.html
@@ -22,6 +22,8 @@
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
+        <link rel="shortcut icon" type="image/ico" href="{% static 'images/favicon.png' %}">
+
         {% block extra_css %}
             {# Override this in templates to add extra stylesheets #}
         {% endblock %}
