cats - email under staff person's name

--- a/libraries/categories/templates/categories/row-item.html
+++ b/libraries/categories/templates/categories/row-item.html
@@ -19,6 +19,9 @@
 				<p class="service-row-item__name">
 					{{ staff.name }}
 				</p>
+				<p class="service-row-item__name">
+					<a href="mailto:{{ staff.email }}">{{ staff.email }}</a>
+				</p>
 				<p class="service-row-item__position">
 					{{ staff.position }}
 				</p>
