scss - less space between name & position in pull quotes

--- a/libraries/libraries/static/scss/components/blog/_blog-post.scss
+++ b/libraries/libraries/static/scss/components/blog/_blog-post.scss
@@ -161,10 +161,7 @@
         display: block;
         font-family: $font-family-serif;
         font-size: 10px;
-      }
-
-      .blog-post__quote-cite-name + .blog-post__quote-cite-position {
-        padding-top: 5px;
+        line-height: 12px;
       }
 
   .blog-post__snippet {
