change social media footer label to 'connect with us'

--- a/libraries/libraries/templates/components/footer/footer-info.html
+++ b/libraries/libraries/templates/components/footer/footer-info.html
@@ -1,6 +1,6 @@
 <li class="footer-section footer-section--info">
 	<h4 class="footer-section__title">
-		Social Media
+		Connect with us
 	</h4>
 	<div class="footer-section__links">
 		<a
