home - add course reserves link under Collections section

--- a/libraries/home/templates/home/home-info-box.html
+++ b/libraries/home/templates/home/home-info-box.html
@@ -29,6 +29,12 @@
 		<p class="home-info-box__item-text">
 			{{page.collections_text}}
 		</p>
+		<br>
+		<p class="home-info-box__item-text">
+			<a class="home-info-box__item-link" href="https://library.cca.edu/cgi-bin/koha/opac-course-reserves.pl">
+				Course Reserves >>
+			</a>
+		</p>
 	</li>
 	<li class="home-info-box__item">
 		<h2 class="home-info-box__item-title">
