cats - fix spec coll blurb formatting

--- a/libraries/categories/templates/categories/special-collection.html
+++ b/libraries/categories/templates/categories/special-collection.html
@@ -17,8 +17,8 @@
 				{% endif %}
 			</span>
 		</h2>
-		<p class="collection__text">
+		<div class="collection__text">
 			{{collection.blurb|richtext}}
-		</p>
+		</div>
 	</div>
 </li>
