--- a/libraries/libraries/static/scss/components/services/_service-row-item.scss
+++ b/libraries/libraries/static/scss/components/services/_service-row-item.scss
@@ -78,6 +78,11 @@
     margin: 0 0 15px;
   }
 
+  .service-row-item__image-wrapper--large {
+    flex: 0 1 75%;
+    margin: 0 0 15px;
+  }
+
     .service-row-item__image {
       display: block;
       height: auto;
