--- a/libraries/libraries/templates/404.html
+++ b/libraries/libraries/templates/404.html
@@ -14,7 +14,7 @@
                 {% search_404 %}
 
                 <p class="about-us-text"><b>Still not seeing what you want?</b> Try one of these:</p>
-                <ul class="about-us-text" style="list-style:inherit">
+                <ul class="about-us-text" style="list-style:inherit; text-indent: 1em;">
                     <li>use <a href="/search?searchType=services">the site search</a></li>
                     <li>start over at <a href="/">our home page</a></li>
                     <li>add <code>site:cca.edu</code> to a Google search to search all CCA sites at once</li>
