--- a/libraries/libraries/templates/404.html
+++ b/libraries/libraries/templates/404.html
@@ -8,13 +8,13 @@
         <h1 class="about-us-title">Page not found</h1>
 
         <div class="about-us-content">
-            <div class="about-us-text-wrapper">
+            <div class="about-us-text-wrapper rich-text">
                 <p class="about-us-text">Sorry, we couldn't find what you were looking for, it may not exist or may have been moved.</p>
 
                 {% search_404 %}
 
                 <p class="about-us-text"><b>Still not seeing what you want?</b> Try one of these:</p>
-                <ul class="about-us-text" style="list-style:inherit; text-indent: 1em;">
+                <ul class="about-us-text">
                     <li>use <a href="/search?searchType=services">the site search</a></li>
                     <li>start over at <a href="/">our home page</a></li>
                     <li>add <code>site:cca.edu</code> to a Google search to search all CCA sites at once</li>
