--- a/libraries/libraries/templates/components/footer/footer-info.html
+++ b/libraries/libraries/templates/components/footer/footer-info.html
@@ -6,22 +6,32 @@
 		<a
 			href="https://www.facebook.com/ccalibrary"
 			title="Like us on Facebook"
-			class="footer-section__social-link facebook"
+			class="footer-section__social-link icon-only facebook"
 		>facebook.com/ccalibrary</a>
 		<a
 			href="https://www.instagram.com/ccalibraries/"
 			title="View our Instagram"
-			class="footer-section__social-link instagram"
+			class="footer-section__social-link icon-only instagram"
 		>CCA Libraries</a>
 		<a
 			href="https://twitter.com/ccalibraries"
 			title="Follow us on Twitter"
-			class="footer-section__social-link twitter"
+			class="footer-section__social-link icon-only twitter"
 		>@CCALibraries</a>
 		<a
 			class="footer-section__social-link news"
 			href="/news"
 			title="CCA Libraries' news"
 		>Libraries' News</a>
+		<a
+			class="footer-section__social-link koha"
+			href="/news"
+			title="CCA Libraries' news"
+		>Sign into your library account</a>
+		<a
+			class="footer-section__social-link newsletter"
+			href="/news"
+			title="CCA Libraries' news"
+		>Check out our newsletter</a>
 	</div>
 </li>
